# kernel

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  build.sh  build_docs.sh
cmake/: config.cmake  docs.cmake
src/: boot.s  kernel.c  linker.ld  panic.c  panic.h
src/drivers/: drivers.h
src/drivers/utils/: types.h
src/kernel/: kernel.c  mb2.c  mb2.h  multiboot2.c  multiboot2.h
src/memory/: kmalloc.c  kmalloc.h  pmm.c  pmm.h
src/utils/: utils.c  utils.h
